# reportlens-backend-

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
services/api/: Dockerfile  pyproject.toml  requirements.txt
services/api/alembic/: env.py
services/api/alembic/versions/: 0001_initial.py
services/api/app/: main.py
services/api/app/api/: deps.py  routes_auth.py  routes_reports.py
services/api/app/core/: config.py  security.py
services/api/app/models/: __init__.py  report.py  user.py
services/api/app/schemas/: report.py
services/api/app/services/: llm_client.py  ocr_client.py  parser_client.py
services/api/app/tasks/: celery_app.py  pipeline.py
services/api/tests/: test_pipeline_stub.py  test_rag_wiring.py
services/data_synthesis/: README.md  pyproject.toml
services/data_synthesis/data_synthesis/: __init__.py  generate_dataset.py  generator.py  ranges.py
services/data_synthesis/tests/: test_generator.py
services/llm_service/: README.md  pyproject.toml
services/llm_service/llm_service/: __init__.py  explainer.py  guardrails.py  ollama_client.py  prompts.py
services/llm_service/llm_service/finetune/: __init__.py  build_dataset.py  dataset.py  train_lora.py
services/llm_service/notebooks/: train_lora_colab.ipynb
services/llm_service/tests/: test_explainer.py  test_finetune_dataset.py  test_guardrails.py
services/medical_parser/: README.md  pyproject.toml
services/medical_parser/medical_parser/: __init__.py  parser.py  reference_ranges.py
services/medical_parser/tests/: test_parser.py
services/ocr_engine/: README.md  pyproject.toml
services/ocr_engine/notebooks/: train_ocr_colab.ipynb
services/ocr_engine/ocr_engine/: __init__.py  dataset.py  infer.py  preprocess.py  recognizer.py  sanity_check.py  segment.py  train_trocr.py
services/ocr_engine/tests/: test_segment_and_infer.py
services/rag/: README.md  pyproject.toml
services/rag/rag/: __init__.py  embedder.py  index.py  knowledge_base.py  retriever.py
services/rag/tests/: test_retriever.py
