[project]
name = "reportlens-data-synthesis"
version = "0.1.0"
description = "Generates synthetic lab-report images with ground-truth labels for OCR training."
requires-python = ">=3.11"
dependencies = ["Pillow>=10.0"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["."]
