[project]
name = "reportlens-rag"
version = "0.1.0"
description = "Retrieval-augmented grounding: curated medical knowledge base + vector search."
requires-python = ">=3.11"
dependencies = ["numpy>=1.26"]

[project.optional-dependencies]
# Production-quality semantic embeddings. Optional so the package stays installable and
# testable offline with the built-in hashing embedder.
semantic = ["sentence-transformers>=2.7"]
dev = ["pytest>=8", "ruff>=0.6"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"rag/knowledge_base.py" = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["."]
